--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,21 @@
         <jboss.maven.plugin.version>7.4.Final</jboss.maven.plugin.version>
         <aerogear.security.version>1.3.1</aerogear.security.version>
         <aerogear.security.picketlink.version>1.3.1</aerogear.security.picketlink.version>
+        <javaee6.bom.version>1.0.0.Final</javaee6.bom.version>
 
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.bom</groupId>
+                <artifactId>jboss-javaee-6.0-with-tools</artifactId>
+                <version>${javaee6.bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -95,6 +108,23 @@
             <artifactId>aerogear-security-picketlink</artifactId>
             <version>${aerogear.security.picketlink.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
