--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <aerogear.security.version>1.3.1</aerogear.security.version>
         <aerogear.security.picketlink.version>1.3.1</aerogear.security.picketlink.version>
         <javaee6.bom.version>1.0.0.Final</javaee6.bom.version>
+        <aerogear.otp.version>1.0.0</aerogear.otp.version>
 
     </properties>
 
@@ -126,6 +127,14 @@
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-otp-java</artifactId>
+            <version>${aerogear.otp.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
