--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </developers>
 
     <properties>
-        <aerogear.push.sender.version>0.3.0</aerogear.push.sender.version>
+        <aerogear.push.sender.version>0.5.0</aerogear.push.sender.version>
         <resteasy.version>3.0.4.Final</resteasy.version>
         <resteasy.jackson.version>2.3.2.Final</resteasy.jackson.version>
         <java.version>1.6</java.version>
@@ -59,8 +59,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.aerogear.unifiedpush</groupId>
-            <artifactId>unified-push-java-client</artifactId>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>unifiedpush-java-client</artifactId>
             <version>${aerogear.push.sender.version}</version>
         </dependency>
         <dependency>
