--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -62,8 +62,8 @@
         <url-pattern>/rest/grocery/beers/*</url-pattern>
     </filter-mapping>
 
-
-    <security-constraint>
+    <!-- Enable Keycloak Oauth2 configuration: uncomment below -->
+<!--     <security-constraint>
         <web-resource-collection>
             <url-pattern>/rest/portal/*</url-pattern>
         </web-resource-collection>
@@ -79,6 +79,6 @@
 
     <security-role>
         <role-name>user</role-name>
-    </security-role>
+    </security-role> -->
 
 </web-app>
